--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==21.2.0
 backports.zoneinfo==0.2.1
 certifi==2021.5.30
 charset-normalizer==2.0.6
+chromedriver-autoinstaller==0.2.2
 Faker==8.14.0
 idna==3.2
 iniconfig==1.1.1
